Make adjustments to deploy the project in wildfly 26